--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "babel-jest": "^23.0.1",
+    "bootstrap": "^4.1.3",
     "lodash": "^4.17.10",
     "pixelmatch": "^4.0.2",
     "regenerator-runtime": "^0.11.1"
