--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "start": "webpack-dev-server --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js"
   },
-  "author": "czechue",
+  "author": "Dennis Michailov",
   "license": "ISC",
   "devDependencies": {
     "autoprefixer": "^8.6.2",
     "babel-core": "^6.26.3",
+    "babel-jest": "^23.0.1",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -39,6 +40,7 @@
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
+    "url-loader": "^1.1.2",
     "webpack": "^4.12.0",
     "webpack-cli": "^3.0.3",
     "webpack-dev-middleware": "^3.1.3",
@@ -46,7 +48,6 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "babel-jest": "^23.0.1",
     "bootstrap": "^4.1.3",
     "lodash": "^4.17.10",
     "pixelmatch": "^4.0.2",
