--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "pixelmatch": "^4.0.2",
     "regenerator-runtime": "^0.11.1"
