--- a/package.json
+++ b/package.json
@@ -31,12 +31,13 @@
     "jest": "^23.1.0",
     "jest-cli": "^23.1.0",
     "jest-puppeteer": "^3.0.1",
-    "mini-css-extract-plugin": "^0.4.0",
+    "mini-css-extract-plugin": "^0.4.5",
     "node-sass": "^4.9.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "pngjs": "^3.3.3",
     "postcss-loader": "^2.1.5",
     "puppeteer": "^1.5.0",
+    "raw-loader": "^1.0.0",
     "sass-loader": "^7.0.3",
     "style-loader": "^0.21.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
