--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "gsap": "^2.0.2",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "pixelmatch": "^4.0.2",
