--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "@types/gsap": "^1.20.0",
+    "@types/jquery": "^3.3.29",
     "bootstrap": "^4.1.3",
     "gsap": "^2.0.2",
     "jquery": "^3.3.1",
