--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
     "pixelmatch": "^4.0.2",
-    "regenerator-runtime": "^0.11.1"
+    "regenerator-runtime": "^0.11.1",
+    "scrollmagic": "^2.0.6"
   }
 }
